feat: add integrations tests for transaction api
