# internal/handler/http/v1/transaction/handler.go
@@ -14,9 +14,9 @@ import (
 //go:generate mockgen -source=handler.go -destination=mock_test.go -package=transaction_test
 
 type Service interface {
-	GetTransactionsBySenderID(
+	GetTransactionsByAccountID(
 		ctx context.Context,
-		senderID int64,
+		accountID int64,
 		listParams transaction.ListParams,
 	) ([]transaction.Transaction, int, error)
 }
@@ -38,12 +38,12 @@ func NewHandler(service Service, logger *zap.Logger) *Handler {
 func (h *Handler) InitAPI(router *gin.RouterGroup) {
 	transactionsGroup := router.Group("/transaction")
 	{
-		transactionsGroup.GET("/:sender_id", h.GetTransactionsBySenderID)
+		transactionsGroup.GET("/:account_id", h.GetTransactionsByAccountID)
 	}
 }
 
-func (h *Handler) GetTransactionsBySenderID(c *gin.Context) {
-	senderID, err := h.ParseIDFromPath(c, "sender_id")
+func (h *Handler) GetTransactionsByAccountID(c *gin.Context) {
+	accountID, err := h.ParseIDFromPath(c, "account_id")
 	if err != nil {
 		h.ErrorResponse(c, http.StatusBadRequest, err, "Transactions not found. id is not valid")
 		return
@@ -71,9 +71,9 @@ func (h *Handler) GetTransactionsBySenderID(c *gin.Context) {
 		return
 	}
 
-	transactions, count, err := h.service.GetTransactionsBySenderID(c.Request.Context(), senderID, listParams)
+	transactions, count, err := h.service.GetTransactionsByAccountID(c.Request.Context(), accountID, listParams)
 	if err != nil {
-		h.ErrorResponse(c, http.StatusInternalServerError, err, "Get transactions by sender id error")
+		h.ErrorResponse(c, http.StatusInternalServerError, err, "Get transactions by account id error")
 		return
 	}
 
